RESOLVED FIXED145921
Fix missing braces and deprecated declarations warnings in WebKitNotificationProvider.cpp
https://bugs.webkit.org/show_bug.cgi?id=145921
Summary Fix missing braces and deprecated declarations warnings in WebKitNotification...
Csaba Osztrogonác
Reported 2015-06-12 04:22:33 PDT
../../Source/WebKit2/UIProcess/API/gtk/WebKitNotificationProvider.cpp:75:9: warning: suggest braces around initialization of subobject [-Wmissing-braces] kWKNotificationProviderCurrentVersion, ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ../../Source/WebKit2/UIProcess/API/gtk/WebKitNotificationProvider.cpp:75:9: warning: 'kWKNotificationProviderCurrentVersion' is deprecated: Use an explicit version number instead [-Wdeprecated-declarations] ../../Source/WebKit2/UIProcess/API/C/WKNotificationProvider.h:61:8: note: 'kWKNotificationProviderCurrentVersion' has been explicitly marked deprecated here enum { kWKNotificationProviderCurrentVersion __attribute__((deprecated("Use an explicit version number instead"))) = 0, }; ^ 2 warnings generated.
Attachments
Patch (1.56 KB, patch)
2015-06-18 06:20 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2015-06-18 06:20:00 PDT
WebKit Commit Bot
Comment 2 2015-06-18 06:22:53 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
WebKit Commit Bot
Comment 3 2015-06-18 07:14:40 PDT
Comment on attachment 255111 [details] Patch Clearing flags on attachment: 255111 Committed r185700: <http://trac.webkit.org/changeset/185700>
WebKit Commit Bot
Comment 4 2015-06-18 07:14:45 PDT
All reviewed patches have been landed. Closing bug.
Michael Catanzaro
Comment 5 2015-06-18 07:31:42 PDT
Got to say, I'm amazed that code was legal....
Note You need to log in before you can comment on or make changes to this bug.