Fix missing braces and deprecated declarations warnings in WebKitNotificationProvider.cpp https://bugs.webkit.org/show_bug.cgi?id=145921

Reviewed by Carlos Garcia Campos.

* UIProcess/API/gtk/WebKitNotificationProvider.cpp:
(WebKitNotificationProvider::WebKitNotificationProvider):


Canonical link: https://commits.webkit.org/164148@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185700 268f45cc-cd09-0410-ab3c-d52691b4dbfc